--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Curso-r
+title: Curso general de R
 description: Notas del Curso de R, para el curso Introducción a la Estadística y Probabilidad CM-274
 google_analytics: 
 show_downloads: true
