--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Curso general de R
 description: Notas del Curso de R, para el curso Introducción a la Estadística y Probabilidad CM-274
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-dinky
 
 gems:
   - jekyll-mentions
